--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^3.1.8",
-    "express": "^4.16.3",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.20.1"
+    "express": "^4.16.3"
   }
 }
