--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-mongodb-session": "^3.1.1",
     "ejs": "^3.1.8",
     "express": "^4.16.3",
+    "express-session": "^1.17.3",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.0"
   }
