--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^1.3.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -23,6 +23,8 @@
     "express": "^4.16.3",
     "express-session": "^1.17.3",
     "mongodb": "^4.7.0",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.0",
+    "nodemailer": "^6.7.5",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
