--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.0",
     "nodemailer": "^6.7.5",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "validatorjs": "^3.22.1"
   }
 }
