--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.4.0",
     "nodemailer": "^6.7.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "string-sanitizer": "^2.0.2",
     "validatorjs": "^3.22.1"
   }
 }
