--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "string-sanitizer": "^2.0.2",
