--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.13.0",
     "string-sanitizer": "^2.0.2",
+    "stripe": "^9.14.0",
     "validatorjs": "^3.22.1"
   }
 }
