--- a/package.json
+++ b/package.json
@@ -6,28 +6,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node app.js",
-  "author": "Maximilian Schwarzmüller",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^1.3.3"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "connect-flash": "^0.1.1",
-    "connect-mongodb-session": "^3.1.1",
-    "csurf": "^1.11.0",
-    "ejs": "^3.1.8",
-    "express": "^4.16.3",
-    "express-session": "^1.17.3",
-    "mongodb": "^4.7.0",
-    "mongoose": "^6.4.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.7.5",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "pdfkit": "^0.13.0",
-    "string-sanitizer": "^2.0.2",
-    "stripe": "^9.14.0",
-    "validatorjs": "^3.22.1"
-  }
+	"author": "Yuri Lisboa",
 }
