--- a/package.json
+++ b/package.json
@@ -1,10 +1,37 @@
 {
 	"name": "online-shop",
-  "version": "1.0.0",
+	"version": "1.0.0",
 	"description": "Complete Online Shop",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node app.js",
+	"main": "app.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "cross-env NODE_ENV=production STRIPE_KEY=YOURSTRIPEKEYNERE SENDGRID_KEY=YOURSENDGRIDAPIKEYHERE SENDGRID_EMAIL=SENDGRIDEMAIL SALT_SECRET=CRYPTOGRAPHYSALTSECRET MONGO_SECRET=MONGODBACCESSKEYWITHUSERANDPASSWORD node app.js",
+		"start:dev": "nodemon app.js",
+		"start-server": "node app.js"
+	},
 	"author": "Yuri Lisboa",
+	"license": "ISC",
+	"devDependencies": {
+		"nodemon": "^1.3.3"
+	},
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.18.3",
+		"connect-flash": "^0.1.1",
+		"connect-mongodb-session": "^3.1.1",
+		"cross-env": "^7.0.3",
+		"csurf": "^1.11.0",
+		"ejs": "^3.1.8",
+		"express": "^4.16.3",
+		"express-session": "^1.17.3",
+		"mongodb": "^4.7.0",
+		"mongoose": "^6.4.0",
+		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.7.5",
+		"nodemailer-sendgrid-transport": "^0.2.0",
+		"pdfkit": "^0.13.0",
+		"string-sanitizer": "^2.0.2",
+		"stripe": "^9.14.0",
+		"validatorjs": "^3.22.1"
+	}
 }
