--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"ejs": "^3.1.8",
 		"express": "^4.16.3",
 		"express-session": "^1.17.3",
+		"helmet": "^6.0.0",
 		"mongodb": "^4.7.0",
 		"mongoose": "^6.4.0",
 		"multer": "^1.4.5-lts.1",
