--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.18.3",
+		"compression": "^1.7.4",
 		"connect-flash": "^0.1.1",
 		"connect-mongodb-session": "^3.1.1",
 		"cross-env": "^7.0.3",
@@ -27,6 +28,7 @@
 		"helmet": "^6.0.0",
 		"mongodb": "^4.7.0",
 		"mongoose": "^6.4.0",
+		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.7.5",
 		"nodemailer-sendgrid-transport": "^0.2.0",
